--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.2.5</version>
-        <relativePath/>
+        <version>3.2.5</version> <relativePath/>
     </parent>
 
     <groupId>br.ce.wcaquino</groupId>
@@ -19,8 +18,7 @@
     <description>A very simple task management tool</description>
 
     <properties>
-        <java.version>21</java.version>
-    </properties>
+        <java.version>21</java.version> </properties>
 
     <dependencies>
         <dependency>
